kubernetes/app/kevinnitrohomelab/billing/billing/deployment.patch.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone-strict/deployment.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-billing
spec:
  template:
    metadata:
      labels:
        istio.io/dataplane-mode: ambient
    spec:
      containers:
        - name: billing
  selector: {}
