kubernetes/app/kevinnitrohomelab/billing/billing/service.patch.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone-strict/service.json
apiVersion: v1
kind: Service
metadata:
  name: billing-billing
  labels:
    istio.io/use-waypoint: egolia-waypoint
    istio.io/use-waypoint-namespace: istio-system
